swagger and listintent
